ecmascript/parser/tests/test262-error-references/fail/03d13b6c40f6aaea.js.stderr
error: TS1005
 --> $DIR/tests/test262-parser/fail/03d13b6c40f6aaea.js:1:4
  |
1 | [{a=0},...0]
  |    ^

